plugins {
	id "java"
	id "org.springframework.boot" version "3.3.5"
	id "io.spring.dependency-management" version "1.1.6"
}

group = "thesis-track.ls1"
version = "3.0.0"

java {
	sourceCompatibility = "21"
	targetCompatibility = "21"
}

repositories {
	mavenCentral()
}

dependencies {
	implementation "org.springframework.boot:spring-boot-starter-data-jpa"
	implementation "org.springframework.boot:spring-boot-starter-web"
	implementation "org.springframework.boot:spring-boot-starter-validation"
	implementation "org.springframework.boot:spring-boot-starter-mail"
	implementation "org.springframework.boot:spring-boot-starter-webflux"
	implementation "org.springframework.boot:spring-boot-starter-security"
	implementation "org.springframework.boot:spring-boot-starter-oauth2-client"
	implementation "org.springframework.boot:spring-boot-starter-oauth2-resource-server"
	implementation "org.springframework.boot:spring-boot-starter-thymeleaf"

	implementation "org.liquibase:liquibase-core"
	implementation "org.postgresql:postgresql"

	implementation "commons-io:commons-io:2.17.0"
	implementation "com.github.vladimir-bukhtoyarov:bucket4j-core:8.0.1"
	implementation "org.mnode.ical4j:ical4j:4.0.4"
	implementation "com.itextpdf:itext-core:8.0.5"
	implementation "com.itextpdf:html2pdf:5.0.5"

	compileOnly "org.projectlombok:lombok"
	annotationProcessor "org.projectlombok:lombok"
}
